# fl-studio

./: .gitignore  .pre-commit-config.yaml  AUDIT_AND_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  README.md  install_scripts.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
audio_tools/: __init__.py  _dsp_utils.py  batch_processor.py  bpm_detector.py  format_converter.py  key_detector.py  sample_slicer.py  spectrum_analyzer.py
dsp/: CMakeLists.txt  __init__.py
dsp/bindings/: pybind_dsp.cpp
dsp/include/: dsp_core.h  effects.h  filters.h
dsp/src/: dsp_core.cpp  effects.cpp  filters.cpp
fl_scripts/edison/: Auto Chop.pyscript  Bit Crusher.pyscript  Fade Designer.pyscript  Spectral Gate.pyscript  Stutter Edit.pyscript  Transient Shaper.pyscript
fl_scripts/piano_roll/: Bass Humanizer - Control Surface Guide.txt  Bass Humanizer.pyscript  Bass Line Generator - Control Surface Guide.txt  Bass Line Generator.pyscript  Bass Octave Doubler - Control Surface Guide.txt  Bass Octave Doubler.pyscript  Chord Stamper Pro - Control Surface Guide.txt  Chord Stamper.pyscript  Chord Voicer - Control Surface Guide.txt  Chord Voicer.pyscript  Ghost Note Generator - Control Surface Guide.txt  Ghost Note Generator.pyscript  Melodic Mirror - Control Surface Guide.txt  Melodic Mirror.pyscript  Note Length Shaper - Control Surface Guide.txt  Note Length Shaper.pyscript  Note Spreader - Control Surface Guide.txt  Note Spreader.pyscript  Rhythm Generator - Control Surface Guide.txt  Rhythm Generator.pyscript  Scale Quantizer.pyscript  Strum Generator - Control Surface Guide.txt  Strum Generator.pyscript  Velocity Curves - Control Surface Guide.txt  Velocity Curves.pyscript
midi_tools/: __init__.py  _validation.py  arpeggiator.py  chord_engine.py  drum_patterns.py  midi_analyzer.py  midi_file_utils.py  midi_transform.py  scale_library.py
mixing/: __init__.py  _biquad.py  channel_strip.py  effects_chain.py  gain_staging.py  mix_analyzer.py  mix_bus.py  reference_compare.py  stereo_tools.py
release/: __init__.py  album.py  export_pipeline.py  licensing.py  lyrics.py  metadata.py
tests/: conftest.py  test_audio_tools.py  test_dsp.py  test_hardened.py  test_midi_tools.py  test_mixing.py  test_real_world.py  test_release.py  test_workflow.py
workflow/: __init__.py  flp_parser.py  preset_manager.py  project_backup.py  render_queue.py  sample_organizer.py
