[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-studio-toolkit"
version = "0.3.0"
description = "Comprehensive toolkit for FL Studio - MIDI tools, audio processing, mixing, workflow automation, release pipeline, and DSP"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FL Studio Toolkit"}]
dependencies = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
analysis = [
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "fl-studio-toolkit[analysis,dev]",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[tool.setuptools.packages.find]
include = ["midi_tools*", "audio_tools*", "workflow*", "mixing*", "release*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests that process all 5 full-length tracks (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["midi_tools", "audio_tools", "mixing", "workflow", "release"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["midi_tools", "audio_tools", "mixing", "workflow", "release"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mido.*", "soundfile.*", "librosa.*", "mutagen.*", "fl_dsp_py.*", "scipy.*"]
ignore_missing_imports = true
